[package]
authors = ["Me <Me>"]
edition = "2018"
name = "daggylp"
version = "0.1.0"

[dependencies]
fnv = "^1.0.7"
dot = { version = "0.1.4", optional = true }
arrayvec = { version = "0.7.1", optional = true}
smallvec = { version = "1.6.1", features = ["const_generics", "union"], optional = true}
grb = { version = "1.0.4", optional = true } # dev-only

[dev-dependencies]
glob = "0.3.0"
proptest = "1.0.0"
rand = { version = "0.8.3", features = ["small_rng"]}
anyhow = "1.0.41"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
daggylp_macros = { path = "./daggylp_macros"}

[features]
default = ["viz"]
viz-extra = ["viz"]
viz = ["dot"]
test-helpers = []
